Make in memory tree default implementation since it only relies on a nodemanager.