@@ -2,107 +2,139 @@ package org.logart;
 
 import org.logart.node.BTreeNode;
 import org.logart.node.NodeManager;
-import org.logart.node.PageBasedNodeManager;
-import org.logart.node.PersistentBTreeNode;
-import org.logart.page.MMAPBasedPageManager;
 
-import java.io.File;
-import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 public class DefaultBPlusTree implements BPlusTree {
-
-    private final ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
-    private final Comparator<byte[]> comparator = Arrays::compareUnsigned;
-
-    private final File file;
-    private final int pageSize;
-
     private final NodeManager nodeManager;
-    private long rootPageId;
+    private final Comparator<byte[]> comparator;
+    private BTreeNode root;
 
-    public DefaultBPlusTree(File file, int pageSize) throws IOException {
-        this.file = file;
-        this.pageSize = pageSize;
-        this.nodeManager = new PageBasedNodeManager(new MMAPBasedPageManager(file, pageSize));
-        this.rootPageId = nodeManager.allocateLeafNode().id(); // Starting with a single leaf
+    public DefaultBPlusTree(NodeManager nodeManager) {
+        this.comparator = Arrays::compareUnsigned;
+        this.nodeManager = nodeManager;
+        this.root = nodeManager.allocateLeafNode(); // start with an empty node
     }
 
     @Override
     public byte[] get(byte[] key) {
-        lock.readLock().lock();
-        try {
-            return getRecursive(rootPageId, key);
-        } finally {
-            lock.readLock().unlock();
+        return recursiveGet(key, root);
+    }
+
+    private byte[] recursiveGet(byte[] key, BTreeNode node) {
+        if (node.isLeaf()) {
+            return node.get(key);
         }
+        long next = node.findChild(key);
+        return recursiveGet(key, nodeManager.readNode(next));
     }
 
     @Override
     public void put(byte[] key, byte[] value) {
-        lock.writeLock().lock();
-        try {
-            BTreeNode root = nodeManager.readNode(rootPageId);
+        SplitResult splitResult = put(root, key, value);
 
-            if (root.isFull()) {
-                // Create new root
-                BTreeNode newRoot = nodeManager.allocateNode();
-                long newRootId = newRoot.id();
-//                newRoot.addChildren(0, rootPageId);
+        if (splitResult != null) {
+            BTreeNode newRoot = nodeManager.allocateNode();
+            newRoot.addChildren(splitResult.promotedKey, splitResult.left.id(), splitResult.right.id());
+            root = newRoot;
+        }
+    }
 
-                splitChild(newRoot, 0, rootPageId);
-                insertNonFull(newRoot, key, value);
+    private SplitResult put(BTreeNode node, byte[] key, byte[] value) {
+        if (node.isLeaf()) {
+            node.put(key, value);
+        } else {
+            long childId = node.findChild(key);
+            BTreeNode child = nodeManager.readNode(childId);
 
-                nodeManager.writeNode(newRootId, newRoot);
-                rootPageId = newRootId;
-            } else {
-                insertNonFull(root, key, value);
-                nodeManager.writeNode(rootPageId, root);
+            SplitResult splitResult = put(child, key, value);
+            if (splitResult != null) {
+                // Insert promotedKey and child pointers
+                node.addChildren(splitResult.promotedKey, splitResult.left.id(), splitResult.right.id());
             }
-        } finally {
-            lock.writeLock().unlock();
+        }
+        if (node.isFull()) {
+            return split(node);
+        }
+
+        return null;
+    }
+
+    private SplitResult split(BTreeNode node) {
+        int mid = (node.numKeys() + 1) / 2;
+        if (node.isLeaf()) {
+            BTreeNode right = nodeManager.allocateLeafNode();
+
+            for (int i = mid; i < node.numKeys(); i++) {
+                byte[][] data = node.get(i);
+                right.put(data[0], data[1]);
+            }
+
+            node.remove(mid, node.numKeys());
+
+            // I don't support it right now
+//            right.next = this.next;
+//            this.next = right;
+
+            return new SplitResult(right.get(0)[0], node, right);
+        } else {
+            byte[] promotedKey = node.get(mid)[0];
+
+            BTreeNode right = nodeManager.allocateNode();
+            right.copyChildren(node, mid, node.numKeys());
+            node.remove(mid, node.numKeys());
+
+            return new SplitResult(promotedKey, node, right);
         }
     }
 
     @Override
     public List<byte[]> getAllKeysInOrder() {
-        return List.of();
+        return Collections.emptyList();
     }
 
-    private void splitChild(BTreeNode newRoot, int i, long rootPageId) {
-
+    public String printStructure() {
+        StringBuilder sb = new StringBuilder();
+        sb.append("B+ Tree Structure:\n");
+//        printRecursive(root, sb, 0);
+        sb.append("B+ Tree Structure end.\n\n");
+        return sb.toString();
     }
 
-    private void insertNonFull(BTreeNode node, byte[] key, byte[] value) {
-        node.put(key, value);
-    }
+//    private void printRecursive(BTreeNode node, StringBuilder sb, int level) {
+//        if (node == null) {
+//            return;
+//        }
+//        String indent = "  ".repeat(level);
+//
+//        if (node.isLeaf()) {
+//            sb.append(indent).append("Leaf ");
+//            for (int i = 0; i < node.numKeys(); i++) {
+//                sb.append(new String(node.key(i))).append(", ");
+//            }
+//            sb.append(" -> ");
+//            for (int i = 0; i < node.numKeys(); i++) {
+//                sb.append(new String(node.get(i)[1])).append(", ");
+//            }
+//            sb.append("\n");
+//        } else {
+//            sb.append(indent).append("Internal ");
+//            for (int i = 0; i < node.numKeys(); i++) {
+//                sb.append(new String(node.key(i))).append(", ");
+//            }
+//            sb.append("\n");
+//            for (long childId : node.childrenDebugTODOREMOVE()) {
+//                BTreeNode child = nodeManager.readNode(childId);
+//                printRecursive(child, sb, level + 1);
+//            }
+//        }
+//    }
 
-    public void close() throws IOException {
-        nodeManager.close();
-    }
-
-    private byte[] getRecursive(long pageId, byte[] key) {
-        BTreeNode node = nodeManager.readNode(pageId);
-
-        int idx = 0;
-        while (idx < node.numKeys() && comparator.compare(key, node.get(idx)[0]) > 0) {
-            idx++;
-        }
-
-        if (node.isLeaf()) {
-            if (idx < node.numKeys() && comparator.compare(key, node.get(idx)[0]) == 0) {
-                return ((PersistentBTreeNode) node).loadValue(idx);
-            } else {
-                return null;
-            }
-        } else {
-//            long childPageId = node.children(idx);
-//            return getRecursive(childPageId, key);
-        }
-        return null;
+    @Override
+    public String toString() {
+        return printStructure();
     }
 }
-
